Fix layout breaks, update deps

--- a/src/components/add-food-components/AddFoodContainer.css
+++ b/src/components/add-food-components/AddFoodContainer.css
@@ -7,6 +7,6 @@
     transform: translateY(-50%);
 }
 
-ion-button {
+ion-button.save {
     margin: 12px;
 }
